<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_order"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/nav_make_order"/>

        <item
            android:checked="true"
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu"
            android:title="@string/nav_show_menu"/>
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about"
            android:title="@string/nav_about"/>
    </group>

    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:title="@string/nav_help"
                android:icon="@android:drawable/ic_menu_help"/>

            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback"/>
        </menu>
    </item>
</menu>