<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_food_detail"
    tools:context=".view.activities.FeedbackActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_main"
            tools:layout_editor_absoluteX="-71dp"
            tools:layout_editor_absoluteY="0dp" />

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/feedback_image"
            android:scaleType="centerCrop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/feedback" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/input_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedback_image" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/name_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/opinion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="start|top"
            android:hint="@string/leave_a_comment"
            android:minLines="5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/stars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/opinion"
            android:gravity="end">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/one_star"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/star_big_off" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/two_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/star_big_off" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/three_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/star_big_off" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/four_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/star_big_off" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/five_stars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/star_big_off" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/send_opinion"
            style="?attr/buttonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:onClick="onClick"
            android:text="@string/send_opinion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stars" />
    </android.support.constraint.ConstraintLayout>


</ScrollView>